--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "jsonapi-serializer": "^3.6.6",
     "morgan": "~1.9.1",
+    "node-sass": "^4.14.1",
     "node-sass-middleware": "0.11.0"
   },
   "devDependencies": {
